public enum EstadoTurno { PENDIENTE, CONFIRMADO, ATENDIDO, CANCELADO }
