public interface Facturable {
    double total();
}
